upgrade nuget libraries add informative comment when getting the caltech dataset processing images with alexnet does not work yet due to changes in ML.NET

--- a/DataPreprocess/packages.config
+++ b/DataPreprocess/packages.config
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Protobuf" version="3.7.0" targetFramework="net462" />
+  <package id="Google.Protobuf" version="3.9.1" targetFramework="net462" />
   <package id="Microsoft.Data.DataView" version="0.11.0" targetFramework="net462" />
-  <package id="Microsoft.ML" version="0.11.0" targetFramework="net462" />
-  <package id="Microsoft.ML.CpuMath" version="0.11.0" targetFramework="net462" />
-  <package id="Microsoft.ML.DnnImageFeaturizer.AlexNet" version="0.11.0" targetFramework="net462" />
-  <package id="Microsoft.ML.ImageAnalytics" version="0.11.0" targetFramework="net462" />
+  <package id="Microsoft.ML" version="1.3.1" targetFramework="net462" />
+  <package id="Microsoft.ML.CpuMath" version="1.3.1" targetFramework="net462" />
+  <package id="Microsoft.ML.DataView" version="1.3.1" targetFramework="net462" />
+  <package id="Microsoft.ML.DnnImageFeaturizer.AlexNet" version="0.15.1" targetFramework="net462" />
+  <package id="Microsoft.ML.ImageAnalytics" version="1.3.1" targetFramework="net462" />
   <package id="Microsoft.ML.Onnx" version="0.10.0" targetFramework="net462" />
-  <package id="Microsoft.ML.OnnxRuntime" version="0.3.1" targetFramework="net462" />
-  <package id="Microsoft.ML.OnnxTransformer" version="0.11.0" targetFramework="net462" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.ML.OnnxRuntime" version="0.5.0" targetFramework="net462" />
+  <package id="Microsoft.ML.OnnxTransformer" version="1.3.1" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
   <package id="SharpZipLib" version="1.1.0" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
@@ -35,9 +36,9 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
   <package id="System.Numerics.Tensors" version="0.1.0" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
@@ -60,7 +61,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net462" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net462" />
