correct results for CIFAR: main problem was that the image format was expecting transposed images

--- a/CifarCryptoNet/CifarCryptoNet.csproj
+++ b/CifarCryptoNet/CifarCryptoNet.csproj
@@ -55,6 +55,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=4.8.1.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
